Closed Bug 998042 Opened 11 years ago Closed 9 years ago

Skia does not 4 byte align alpha surfaces which breaks interop with cairo

Categories

(Core :: Graphics, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla44
Tracking Status
firefox44 --- fixed

People

(Reporter: jrmuizel, Assigned: lsalzman)

References

Details

Attachments

(1 file, 3 obsolete files)

No description provided.
Blocks: skia-reftest
Attached patch An attempt (obsolete) — Splinter Review
Attached patch A better version (obsolete) — Splinter Review
This avoids breaking one of skia's assumptions. There might be more than this. Instead of patching skia it might be better to just do allocations manually when constructing skia drawtargets. This should take care of all or most of the interop cases and does not break any of skia's assumptions.
Attachment #8408583 - Attachment is obsolete: true
Whiteboard: [skia-upstream]
Assignee: nobody → jmuizelaar
(In reply to Jeff Muizelaar [:jrmuizel] from comment #3) > Created attachment 8418363 [details] [diff] [review] > An attempt at this that doesn't change skia This version of the patch that just works within DrawTargetSkia is safe as far as I can see. I have been testing with it locally for months. As a bonus, it is non-invasive and requires no effort to upstream, since it just works within out code. I think we should just go ahead and checkin this to get it out of the way. Is that okay?
Flags: needinfo?(jmuizelaar)
Yep.
Flags: needinfo?(jmuizelaar)
Probably needs some rebasing...
This is a rebased and cleaned up version of Jeff's patch to work against our current tree Skia.
Assignee: jmuizelaar → lsalzman
Attachment #8411052 - Attachment is obsolete: true
Attachment #8418363 - Attachment is obsolete: true
Status: NEW → ASSIGNED
Attachment #8671453 - Flags: review?(jmuizelaar)
Attachment #8671453 - Flags: review?(jmuizelaar) → review+
Keywords: checkin-needed
Whiteboard: [skia-upstream]
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla44
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: