Bug 998042 - 4-byte align Skia surfaces to interoperate with Cairo r=jrmuizel